--- a/Finding_Hospitals/.project
+++ b/Finding_Hospitals/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Finding_Hospitals</name>
+	<name>Finding_Hospitals_For_Git</name>
 	<comment></comment>
 	<projects>
 	</projects>
